# tripl

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  compose.yaml
.beads/: issues.jsonl  (+2 more)
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0a1b2c3d4e5f_add_alert_rule_message_templates.py  0a1b2c3d4e5f_add_field_sensitivity.py  1b2c3d4e5f6a_add_alert_rule_items_template.py  2c3d4e5f6a7b_add_users_and_sessions.py  2d3e4f5a6b7c_add_hot_path_indexes.py  3e4f5a6b7c8d_add_data_source_health.py  4f5a6b7c8d9e_add_metric_breakdowns.py  5a6b7c8d9e0f_replace_alert_rule_exclusions_with_filters.py  6b7c8d9e0f1a_add_event_last_seen_at.py  77394a329773_initial.py  7c8d9e0f1a2b_add_schema_drifts.py  8d9e0f1a2b3c_add_schema_drift_alert_fields.py  9e0f1a2b3c4d_add_plan_revisions.py  9e2925eec2d2_add_variables_table.py  a0b1c2d3e4f5_add_field_sensitivity.py  a1b2c3d4e5f6_add_data_sources_scan_configs_scan_jobs.py  a1b2c3d4e5f6_add_event_last_seen_at.py  a7b8c9d0e1f2_add_metric_anomalies_and_scan_detection_settings.py  b2c3d4e5f6a7_add_schema_drifts.py  b2c3d4e5f6a7_make_data_sources_global.py  b8c9d0e1f2a3_add_project_anomaly_settings.py  c3d4e5f6a7b8_add_time_column_name_format_reviewed.py  c9d0e1f2a3b4_add_link_template_to_meta_fields.py  d10614acc200_add_implemented_flag_and_event_tags_.py  d4e5f6a7b8c9_add_archived_to_events.py  d7e8f9a0b1c2_add_alerting_tables.py  e5f6a7b8c9d0_rename_schedule_to_interval_add_event_metrics.py  e8f9a0b1c2d3_add_scan_preview_json_value_paths_and_alert_item_labels.py  (+3 more)
(+263 files in other folders)
