[project]
name = "tripl"
version = "0.1.0"
description = "Analytics tracking plan service"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.15",
    "pydantic-settings>=2.8",
    "celery[rabbitmq]>=5.4",
    "clickhouse-connect>=0.8",
    "cryptography>=44.0",
    "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "aiosqlite>=0.21",
    "ruff>=0.11",
    "mypy>=1.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tripl"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/tripl/tests"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
